Fix thumbs on mobile and constrain big images

--- a/resources/less/mobile.less
+++ b/resources/less/mobile.less
@@ -48,12 +48,14 @@ div.tright,
 div.tleft {
 	float: none;
 	clear: none;
-	margin: 0;
-	padding: 0;
+	margin-left: 0;
+	margin-right: 0;
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .thumbinner {
-	max-width: 85% !important; // stylelint-disable-line declaration-no-important
+	width: 85% !important; // stylelint-disable-line declaration-no-important
 
 	img {
 		display: block;
