--- a/resources/less/style.less
+++ b/resources/less/style.less
@@ -288,6 +288,11 @@ textarea {
 	border: solid 1px @skin-wmau-lightgreen;
 }
 
+.image img {
+	max-width: 100%;
+	height: auto;
+}
+
 .printfooter,
 .skin-wmau-retrievedfrom {
 	display: none;
